--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "name": "api-vulneravel",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "sequelize": "^6.37.7"
   }
 }
